--- a/apps/hue-crm/src/index.html
+++ b/apps/hue-crm/src/index.html
@@ -8,6 +8,6 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<hue-crm-root></hue-crm-root>
+<huecrm-root></huecrm-root>
 </body>
 </html>
